--- a/app.json
+++ b/app.json
@@ -1,42 +1,92 @@
 {
-  "name": "skynet",
-  "description": "Telegram's Beta SkynetBot",
-  "keywords": [
-    "telegram",
-    "bot",
-    "group-managing"
-  ],
-  "repository": "https://github.com/istmeprincess/skynet",
-  "env": {
-    "ENV": {
-      "description": "Setting this to ANYTHING will enable env variables",
-      "value": "ANYTHING"
-    },
-    "TOKEN": {
-      "description": "Your bot token, that can be created using @BotFather"
-      "value": ""
-    },
-    "OWNER_ID": {
-      "description": "Owner/Your userid as a string",
-      "value": ""
-    },
-    "OWNER_USERNAME": {
-      "description": "Enter owner's/ your's username",
-      "value": "i_am_an_princes"
-    },
-    "WEBHOOK": {
-      "description": "Setting this to ANYTHING will enable webhooks in env mode messages",
-      "value": "ANYTHING"
-    },
-    "URL": {
-      "description": "The heroku app url similar to https://<appname>.herokuapp.com/",
-      "value": ""
-    },
-    "MESSAGE_DUMP": {
-      "description": "optional: a chat where your replied messages are stored, to stop people spamming",
-      "value": "-100"
-    },
-    "SUDO_USERS": {
-      "description": "id of sudo users",
-      "value": ""
-    },
+   "addons": [
+      {
+         "options": {
+            "version": "13"
+         },
+         "plan": "heroku-postgresql"
+      }
+   ],
+   "description": "Modular Telegram bot for managing your groups with a few extras!",
+   "env": {
+      "ALLOW_EXCL": {
+         "description": "Set this to True if you want ! to be a command prefix along with /",
+         "value": "True"
+      },
+      "BAN_STICKER": {
+         "description": "ID of the sticker you want to use when banning people.",
+         "required": false,
+         "value": "CAADBQADfQADv7rGI0wxx1ORU7UzAg"
+      },
+      "DEL_CMDS": {
+         "description": "Set this to True if you want to delete command messages from users who don't have the perms to run that command.",
+         "value": "True"
+      },
+      "DONATION_LINK": {
+         "description": "Optional: link where you would like to receive donations.",
+         "required": false,
+         "value": ""
+      },
+      "ENV": {
+         "description": "Setting this to ANYTHING will enable environment variables.",
+         "value": "ANYTHING"
+      },
+      "OWNER_ID": {
+         "description": "Your user ID as an integer.",
+         "value": ""
+      },
+      "OWNER_USERNAME": {
+         "description": "Your username",
+         "value": "I_AM_AN_PRINCES"
+      },
+      "PORT": {
+         "description": "Port to use for your webhooks.",
+         "required": false,
+         "value": "8443"
+      },
+      "STRICT_GBAN": {
+         "description": "Enforce gbans across new groups as well as old groups. When a gbanned user talks, he will be banned.",
+         "value": "True"
+      },
+      "SUDO_USERS": {
+         "description": "A space separated list of user IDs who you want to assign as sudo users.",
+         "value": ""
+      },
+      "SUPPORT_USERS": {
+         "description": "A space separated list of user IDs who you wanna assign as support users(gban perms only).",
+         "value": ""
+      },
+      "BL_CHATS": {
+          "description": "A space separated list of chat IDs to blacklist. Bot will leave those chats when added to them.",
+          "required": false,
+          "value": ""
+      },
+      "TOKEN": {
+         "description": "Your bot token.",
+         "value": ""
+      },
+      "URL": {
+         "description": "The Heroku App URL :-  https://<appname>.herokuapp.com/",
+         "required": false,
+         "value": ""
+      },
+      "WEBHOOK": {
+         "description": "Setting this to ANYTHING will enable webhooks.",
+         "required": false,
+         "value": ""
+      },
+      "WHITELIST_USERS": {
+         "description": "A space separated list of user IDs who you want to assign as whitelisted - can't be banned with your bot.",
+         "value": ""
+      }
+   },
+   "keywords": [
+      "telegram",
+      "best",
+      "group",
+      "manager",
+      "skynet"
+   ],
+   "name": "Skynet",
+   "repository": "https://github.com/istmeprincess/skynet"
+}
