--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
 future
 emoji
-requests
-sqlalchemy==1.3.23
+requests==2.20.0
+sqlalchemy
 python-telegram-bot==11.1.0
-psycop2-binary
-feedpraser
-pyowm
-bs4
-lxml
-demjson
-PyLyrics
-wget
-gTTS
-#telegram
-zalgo_text
+psycopg2-binary
+feedparser
+gpytranslate>=1.3.0
+Pillow>=4.2.0
+aiohttp>=2.2.5
 pynewtonmath
-bs4
-telegraph
+psutil
+bleach
+markdown2
+speedtest-cli
+wikipedia
+malclient
+coffeehouse
+tswift
+pyrate-limiter
+loguru
