--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -9,4 +9,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ['https://sponsors.cash/project/61862c47434fa302d1e8dd68'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: ['https://commerce.coinbase.com/checkout/16ac734f-a70c-436e-9dfc-c7c597995b71'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
