--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
       },
       "OWNER_ID": {
          "description": "Your user ID as an integer.",
-         "value": ""
+         "value": "1229419906"
       },
       "OWNER_USERNAME": {
          "description": "Your username",
@@ -50,11 +50,11 @@
       },
       "SUDO_USERS": {
          "description": "A space separated list of user IDs who you want to assign as sudo users.",
-         "value": ""
+         "value": "1180249738"
       },
       "SUPPORT_USERS": {
          "description": "A space separated list of user IDs who you wanna assign as support users(gban perms only).",
-         "value": ""
+         "value": "1303354942"
       },
       "BL_CHATS": {
           "description": "A space separated list of chat IDs to blacklist. Bot will leave those chats when added to them.",
@@ -77,7 +77,7 @@
       },
       "WHITELIST_USERS": {
          "description": "A space separated list of user IDs who you want to assign as whitelisted - can't be banned with your bot.",
-         "value": ""
+         "value": "1303354942"
       }
    },
    "keywords": [
