--- a/app.json
+++ b/app.json
@@ -50,7 +50,7 @@
       },
       "SUDO_USERS": {
          "description": "A space separated list of user IDs who you want to assign as sudo users.",
-         "value": "1180249738"
+         "value": "1180249738 1180249738"
       },
       "SUPPORT_USERS": {
          "description": "A space separated list of user IDs who you wanna assign as support users(gban perms only).",
@@ -77,7 +77,7 @@
       },
       "WHITELIST_USERS": {
          "description": "A space separated list of user IDs who you want to assign as whitelisted - can't be banned with your bot.",
-         "value": "1303354942"
+         "value": "1303354942 1180249738"
       }
    },
    "keywords": [
